--- a/app/manifest.json
+++ b/app/manifest.json
@@ -47,5 +47,6 @@
     },
     "default_title": "sample extension yo 01",
     "default_popup": "popup.html"
-  }
+  },
+  "devtools_page": "devtools.html"
 }
